--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,14 +1,23 @@
+name: CI/CD - Build and Push Full Stack App
+
 on: 
   push:
     branches:
       - 'main'
-jobs: 
-  build_and_test:
-    name: Build and Test Docker Images
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
 
-    - name: Build Docker image
-      run: docker compose build
+jobs: 
+  build_and_deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Build Docker image
+        run: docker compose build
+
+      - name: Push Docker image
+        run: docker compose push
