--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: "3.8"
 
 services:
   app:
-    build: ./backend
+    build:
+      context: .
+      dockerfile: ./backend/Dockerfile
     image: adeelhussain12/quotes-demo:latest
     ports:
       - "5000:5000"
